...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".169">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:fadeScrollbars="false"
            android:fillViewport="false"
            android:paddingBottom="20dp">
...
                    android:text="@string/easyToUse"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <RatingBar
                    android:id="@+id/easy_to_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-38dp"
                    android:layout_marginTop="-14dp"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleIndicator"
...
                    android:text="@string/clearPictures"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <RatingBar
                    android:id="@+id/pictures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-38dp"
                    android:layout_marginTop="-14dp"
                    android:numStars="5"
                    android:scaleX="0.6"
...
                    android:text="@string/clearVoice"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <RatingBar
                    android:id="@+id/voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-38dp"
                    android:layout_marginTop="-14dp"
                    android:numStars="5"
                    android:scaleX="0.6"
...
                    android:text="@string/easyToNavigate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <RatingBar
                    android:id="@+id/navigate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-38dp"
                    android:layout_marginTop="-14dp"
                    android:numStars="5"
                    android:scaleX="0.6"
...
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/commentSuggestions"
                        android:inputType="textMultiLine"
                        android:textSize="22dp" />
...
        android:gravity="center_vertical">
        <Button
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:text="@string/submit"
            android:layout_marginLeft="20dp"
            android:id="@+id/bSubmit"
            android:textSize="14dp"
            android:background="#FFBEBCB6"/>
    </LinearLayout>
</LinearLayout>
