...
    <string name="resetPrefPointTwo">By resetting preferences, the icons will be set to the original order in which they were displayed the first time the application was opened</string>
    <string name="resetPrefPointThree">Do you want to reset preferences?</string>
    <string name="bullet" translatable="false">●</string>

    <string name="downloadErrorMsg">Please ensure an active Internet connection during the entire download process. In case the progress bar is stalled, kindly restart the app or try again</string>
    <string name="intro_to_jellow">Introduction to Jellow</string>
    <string name="rate_jellow">Kindly rate Jellow in all fields.</string>
    <string name="keyboard">Keyboard</string>
    <string name="user_country_code" translatable="false">com.dsource.idc.jellow.user_country_code</string>
    <string name="txt_intro1_central9btn">Jellow has 9 central category buttons</string>
    <string name="txt_intro1_categorybtn">Category buttons</string>
    <string name="txt_intro5_jellowUsageDesc">The application also has 6 expressive side buttons</string>
    <string name="txt_intro5_expressiveBtn">Expressive buttons</string>
...
